--- a/FinanceTrackerApi/FinanceTrackerApi.csproj
+++ b/FinanceTrackerApi/FinanceTrackerApi.csproj
@@ -26,5 +26,6 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.7.1" />
   </ItemGroup>
 </Project>
